--- a/ansible/roles/mariadb_single/vars/main.yaml
+++ b/ansible/roles/mariadb_single/vars/main.yaml
@@ -1,80 +1,7 @@
-dir:
-  datadir: /var/lib/mysql
-  logdir: "{{ default_mysqld_logdir }}"
-  tmpdir: "{{ default_mysqld_tmpdir }}"
-  datadir_origin: "{{ default_mysqld_datadir_origin }}"
-mysqld:
-  ### Basic ###
-  socket: "{{ dir.datadir }}/mysql.sock"
-  port: "{{ default_mysqld_port }}"
-  skip_name_resolve: 1
-  ### InnoDB ###
-  innodb_buffer_pool_size: "{{ default_mysqld_innodb_buffer_pool_size }}"
-  innodb_buffer_pool_instances: "{{ default_mysqld_innodb_buffer_pool_instances }}"
-  innodb_autoinc_lock_mode: 2
-  innodb_doublewrite: 1
-  innodb_flush_log_at_trx_commit: 1
-  innodb_flush_method: O_DIRECT
-  innodb_log_buffer_size: 16M
-  ### packet size ###
-  max_allowed_packet: "{{ default_mysqld_max_allowed_packet }}"
-  ### Open cache ###
-  table_open_cache: "{{ default_mysqld_open_cache }}"
-  ### Thread ###
-  thread_cache_size: "{{ default_mysqld_thread_cache_size }}"
-  max_connections: "{{ default_mysqld_max_connections }}"
-  ### Timeout ###
-  wait_timeout: "{{ default_mysqld_wait_timeout }}"
-  interactive_timeout: 30
-  connect_timeout: 30
-  ### Temporary ###
-  tmp_table_size: "{{ default_mysqld_tmp_table_size }}"
-  max_heap_table_size: "{{ default_mysqld_max_heap_table_size }}"
-  tmpdir: "{{ dir.tmpdir }}/tmp"
-  ### Log ###
-  log_output: FILE
-  log_queries_not_using_indexes: "{{ default_mysqld_log_queries_not_using_indexes }}"
-  log_warnings: "{{ default_mysqld_log_warnings }}"
-  long_query_time: "{{ default_mysqld_long_query_time }}"
-  slow_query_log_file: "{{ dir.logdir }}/mysql_slow.log"
-  log_error: "{{ dir.logdir }}/mysql_error.log"
-  general_log_file: "{{ dir.logdir }}/mysql_general.log"
-  ### Redo log ###
-  innodb_log_files_in_group: "{{ default_mysqld_innodb_log_files_in_group }}"
-  innodb_log_file_size: "{{ default_mysqld_innodb_log_file_size }}"
-  ### Thread pool ###
-  thread_handling: pool-of-threads
-  thread_pool_size: "{{ default_mysqld_thread_pool_size }}"
-  extra_port: "{{ default_mysqld_extra_port }}"
-  extra_max_connections: "{{ default_mysqld_extra_max_connections }}"
-  ### Replication ###
-  gtid_domain_id: "{{ default_mysqld_gtid_domain_id }}"
-  report_host: "{{ default_mysqld_report_host }}"
-  report_port: "{{ default_mysqld_port }}"
-  expire_logs_days: "{{ default_mysqld_expire_logs_days }}"
-  server_id: "{{ default_mysqld_server_id }}"
-  max_binlog_size: 200M
+percona_centos_url: http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
 
-version: "{{ default_mariadb_version }}"
-base_version: "{{ default_mariadb_base_version }}"
-
-repos:
-  distribution_centos: CentOS
-  url: http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
-
-os:
-  distribution_centos:
-    name: CentOS
-    version7: 7
-    version6: 6
-    version5: 5
-
-sysctl:
-  vm:
-    swappiness: 10
-
-admin_user:
-  name: "{{ vault_mysqld_root_user }}"
-  passwd: "{{ default_mysqld_root_passwd }}"
-  priv: "{{ vault_mysqld_root_priv }}"
-
+distro_centos:
+  name: CentOS
+  version7: 7
+  version6: 6
+  version5: 5
