--- a/ansible/inventories/staging/group_vars/test_phpmyadmin/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_phpmyadmin/vars.yaml
@@ -1,4 +1,3 @@
-gateway_ip: 192.168.10.1
 ### server for phpmyadmin and rockmongo
 nginx_service_name: dbadmin
 nginx_vhost_name: dbadmin.example.com
@@ -6,8 +5,8 @@ nginx_install_dir: /etc/nginx
 nginx_conf_dir: /etc/nginx/conf.d
 nginx_conf_file: "{{ nginx_conf_dir }}/{{ nginx_vhost_name }}.conf"
 nginx_log_dir: "/var/log/nginx/{{ nginx_vhost_name }}"
-nginx_access_log: "{{ nginx_log_dir }}/access_log"
-nginx_error_log: "{{ nginx_log_dir }}/error_log"
+nginx_access_log: "{{ nginx_log_dir }}/access.log"
+nginx_error_log: "{{ nginx_log_dir }}/error.log"
 nginx_root_dir: "/var/www/{{ nginx_vhost_name }}"
 nginx_htaccess_file: "{{ nginx_install_dir }}/.dbadmin_passwd"
 nginx_user: nginx
@@ -21,6 +20,12 @@ nginx_index: "index.php index.html"
 nginx_auth: |
     auth_basic "dbadmin site";
     auth_basic_user_file {{ nginx_htaccess_file }};
+
+nginx_allow_ips: |
+    allow 127.0.0.1;
+    allow 192.168.10.0/24;
+    allow 192.168.5.0/24;
+    deny all;
 
 nginx_locations: |
     location ~ \.php$ {
@@ -42,6 +47,6 @@ mysql_servers:
 mongo_servers: NA
 
 ### vault
-nginx_htaccess_name: "{{ vault_nginx_test_phpmyadmin_htaccess_name }}"
-nginx_htaccess_password: "{{ vault_nginx_default_htaccess_password }}"
-phpmyadmin_blowfish_secret: "{{ vault_phpmyadmin_test_phpmyadmin_blowfish_secret }}"
+nginx_htaccess_name: "{{ vault_nginx_default_htaccess_name }}"
+nginx_htaccess_passwd: "{{ vault_nginx_default_htaccess_passwd }}"
+phpmyadmin_blowfish_secret: "{{ vault_phpmyadmin_default_blowfish_secret }}"
