--- a/ansible/inventories/staging/group_vars/test_mariadb/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_mariadb/vars.yaml
@@ -2,7 +2,8 @@ mariadb_base_version: 10.0
 mariadb_version: 10.0.21
 
 mariadb_datadir: /var/lib/mysql
-mariadb_datadir_origin: /data/mysql_datadir
+mariadb_datadir_base: /var/lib
+mariadb_datadir_origin: "{{ mariadb_datadir_base }}/mysql"
 mariadb_logdir: /var/log/mysqld
 mariadb_tmpdir: "{{ mariadb_logdir }}/tmp"
 mariadb_log_error: "{{ mariadb_logdir }}/mysql_error.log"
@@ -10,6 +11,7 @@ mariadb_slow_query_log_file: "{{ mariadb_logdir }}/mysql_slow.log"
 mariadb_general_log_file: "{{ mariadb_logdir }}/mysql_general.log"
 
 mariadb_user: mysql
+mariadb_group: mysql
 mariadb_port: 3306
 mariadb_bind_address: 0.0.0.0
 mariadb_socket: "{{ mariadb_datadir }}/mysql.sock"
