--- a/ansible/roles/mariadb_single/defaults/main.yaml
+++ b/ansible/roles/mariadb_single/defaults/main.yaml
@@ -2,7 +2,8 @@ mariadb_base_version: 10.0
 mariadb_version: 10.0.21
 
 mariadb_datadir: /var/lib/mysql
-mariadb_datadir_origin: /data/mysql_datadir
+mariadb_datadir_base: /data
+mariadb_datadir_origin: "{{ mariadb_datadir_base }}/mysql_datadir"
 mariadb_logdir: /var/log/mysqld
 mariadb_tmpdir: "{{ mariadb_logdir }}/tmp"
 mariadb_log_error: "{{ mariadb_logdir }}/mysql_error.log"
