--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -57,7 +57,7 @@ inventory      = /etc/ansible/inventories/staging/hosts.yaml
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback
 #stdout_callback = skippy
