--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -113,6 +113,9 @@
 - name: Restart and enable ntpd
   service: name="ntpd" enabled=yes state=restarted
 
+- name: Start and enable sshd
+  service: name="sshd" enabled=yes state=started
+
 - name: Create admin group
   group:
     name: "{{ admin_group }}"
