--- a/ansible/roles/dbadmin/tasks/main.yaml
+++ b/ansible/roles/dbadmin/tasks/main.yaml
@@ -5,32 +5,34 @@
   with_items:
     - nginx
     - mysql
-  when: install_dependency == 1
+  when: dbm_install_dependency == 1
+  tags: nginx
 
-- name: Install php package
+- name: Install php packages
   yum: name="{{ item }}" update_cache=yes enablerepo=remi-php71
   with_items:
     - php
     - php-mysql
     - php-fpm
     - php-mbstring
+  when: dbm_install_dependency == 1
   tags: php
 
 - name: Download phpmyadmin package
-  get_url: 
+  get_url:
     url: "{{ phpmyadmin_url }}"
     dest: "/tmp/{{ phpmyadmin_version }}-{{ phpmyadmin_language }}.tar.xz"
     mode: 0644
     owner: root
     group: root
-     
+
 - name: Unarchive phpmyadmin package
   unarchive:
     src: "/tmp/{{ phpmyadmin_version }}-{{ phpmyadmin_language }}.tar.xz"
     dest: /tmp
     remote_src: yes
 
-- name: Remove phpmyadmin in tmp 
+- name: Remove phpmyadmin in tmp
   file: path=/tmp/phpmyadmin state=absent
 
 - name: Rename to phpmyadmin
@@ -47,7 +49,7 @@
     - "{{ nginx_root_dir }}"
     - "{{ nginx_log_dir }}"
     - "{{ nginx_conf_dir }}"
-   
+
 - name: Move phpmyadmin to document root
   command: "mv /tmp/phpmyadmin  {{ nginx_root_dir }}"
   ignore_errors: yes
@@ -87,4 +89,4 @@
   tags: restart
 
 - name: Show msg
-  debug: msg="Access http://{{ nginx_vhost_name }}:{{ nginx_listen }}/phpmyadmin/index.php. Remember point domain {{ nginx_vhost_name }} to {{ ansible_default_ipv4.address }}" 
+  debug: msg="Access http://{{ nginx_vhost_name }}:{{ nginx_listen }}/phpmyadmin/index.php. Remember point domain {{ nginx_vhost_name }} to {{ ansible_default_ipv4.address }}"
