--- a/ansible/inventories/staging/group_vars/test_nginx/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_nginx/vars.yaml
@@ -39,8 +39,8 @@ nginx_vhosts:
         upstream {{ nginx_vhosts.0.service_name }} {
           server 192.168.10.122:80;
         }
-    cache_dir: /data/nginx/cache/{{ nginx_vhosts.0.service_name }}
-    cache_name: {{ nginx_vhosts.0.service_name }}_cache
+    cache_dir: "/data/nginx/cache/{{ nginx_vhosts.0.service_name }}"
+    cache_name: "{{ nginx_vhosts.0.service_name }}_cache"
     proxy_cache_path: /data/nginx/cache/{{ nginx_vhosts.0.service_name }} levels=1:2 keys_zone={{ nginx_vhosts.0.service_name }}_cache:10m max_size=1g inactive=60m use_temp_path=off
 
   - service_name: motel
