--- a/ansible/roles/php-fpm/defaults/main.yaml
+++ b/ansible/roles/php-fpm/defaults/main.yaml
@@ -7,3 +7,6 @@ php_fpm_listen_group: nobody
 php_fpm_listen_mode: 0660
 php_fpm_user: nginx
 php_fpm_group: nginx
+### Control param
+### pfm_enable: 0|1
+pfm_enable: 0
