--- a/ansible/roles/php-fpm/tasks/main.yaml
+++ b/ansible/roles/php-fpm/tasks/main.yaml
@@ -5,16 +5,20 @@
     - php-mysql
     - php-fpm
     - php-mbstring
+  when: pfm_enable == 1
   tags: php
 
 - name: Config php-fpm
   template: src=php_fpm.conf.j2 dest=/etc/php-fpm.conf backup=yes
+  when: pfm_enable == 1
 
 - name: Config php-fpm.d/www.conf
   template: src=php_fpm.d.www.conf.j2 dest=/etc/php-fpm.d/www.conf backup=yes
+  when: pfm_enable == 1
 
 - name: Restart and enable php-fpm
   systemd: name=php-fpm.service enabled=yes daemon_reload=yes state=restarted
   when:
+    - pfm_enable == 1
     - ansible_distribution == "{{ distro_centos.name }}"
     - ansible_distribution_major_version == "{{ distro_centos.version7 }}"
