--- a/ansible/inventories/staging/hosts.yaml
+++ b/ansible/inventories/staging/hosts.yaml
@@ -11,7 +11,7 @@ gateway_ip=192.168.10.1
 gateway_persistent=true
 
 [test_nginx]
-test2 ansible_host=192.168.10.122 hostname=test2 ngx_built=1 ngx_enable_php=1 ngx_role=web
+test2 ansible_host=192.168.10.122 hostname=test2 ngx_built=1 ngx_enable_php=1 ngx_role=web pfm_enable=1
 test3 ansible_host=192.168.10.123 hostname=test3 ngx_built=1 ngx_role=proxy_cache
 test4 ansible_host=192.168.10.124 hostname=test4 ngx_built=1 ngx_role=proxy_cache
 
