--- a/ansible/playbooks/staging/lab/test_nginx.yaml
+++ b/ansible/playbooks/staging/lab/test_nginx.yaml
@@ -1,5 +1,5 @@
 - name: Deploy nginx web server
   hosts: test_nginx
   roles:
-  - role: php-fpm
-  - role: nginx
+  - {name: php-fpm, tags: php-fpm}
+  - {name: nginx, tags: nginx}
