--- a/ansible/inventories/staging/group_vars/test_nginx/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_nginx/vars.yaml
@@ -78,7 +78,7 @@ ngx_role: web
 ### ngx_built: 0|1
 ngx_built: 0
 
-php_fpm_unix_listen: unix:/var/run/php-fpm/php-fpm.sock
+php_fpm_unix_listen: /var/run/php-fpm/php-fpm.sock
 php_fpm_tcp_listen: 127.0.0.1:9000
 ### php_fpm_listen is php_fpm_unix_listen or php_fpm_tcp_listen
 php_fpm_listen: "{{ php_fpm_unix_listen }}"
@@ -87,3 +87,6 @@ php_fpm_listen_group: nobody
 php_fpm_listen_mode: 0660
 php_fpm_user: nginx
 php_fpm_group: nginx
+### Control param
+### pfm_enable: 0|1
+pfm_enable: 0
