--- a/ansible/inventories/staging/group_vars/test_nginx/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_nginx/vars.yaml
@@ -84,7 +84,7 @@ php_fpm_tcp_listen: 127.0.0.1:9000
 php_fpm_listen: "{{ php_fpm_unix_listen }}"
 php_fpm_listen_owner: nobody
 php_fpm_listen_group: nobody
-php_fpm_listen_mode: 0660
+php_fpm_listen_mode: "0660"
 php_fpm_user: nginx
 php_fpm_group: nginx
 ### Control param
